fixed treemap tooltip spacing issues, working on website layout

--- a/implementation/css/style.css
+++ b/implementation/css/style.css
@@ -69,10 +69,12 @@ p {
 }
 
 .vis-title {
-	padding-top: 30px;
-	font-size: 56px;
-	font-weight: bold;
-	text-align: center;
+	/*padding-top: 30px;*/
+	/*font-size: 56px;*/
+	/*font-weight: bold;*/
+	/*text-align: center;*/
+	font-weight: bolder;
+	font-size: 64px;
 }
 
 .vis-subtitle {
@@ -146,6 +148,18 @@ p {
 /*    TREEMAP VIS    */
 /*********************/
 
+.card {
+	border-color: #d7d7d7;
+}
+
+.card-header {
+	background-color: #c3c3c3;
+}
+
+.card-body {
+	background-color: #d7d7d7;
+}
+
 .treemap-container {
 	position: relative;
 }
@@ -161,8 +175,10 @@ p {
 }
 
 .tooltip-div {
-	max-width: 480px;
+	max-width: 500px;
 	color: black;
+	text-align: left;
+	padding: 10px;
 }
 
 .treemap-p {
